[metadata]
name = retrace
author = Dougal Matthews
author-email = dougal@dougalmatthews.com
summary = Configurable retrying for Pythonistas.
description-file = README.md
home-page = https://github.com/d0ugal/retrace
license = BSD
classifier =
    Intended Audience :: Developers'
    Natural Language :: English'
    License :: OSI Approved :: Apache Software License'
    Programming Language :: Python'
    Programming Language :: Python :: 2.7'
    Programming Language :: Python :: 3.2'
    Programming Language :: Python :: 3.3'
    Programming Language :: Python :: 3.4'
    Programming Language :: Python :: 3.5'
    Topic :: Internet'
    Topic :: Utilities'
keywords =
    decorator
    retry
    retrying
    exception
    exponential
    backoff

[files]
package_dir = src
packages =
    retrace

[wheel]
universal = 1
