[metadata]
name = retrace
author = Dougal Matthews
author-email = dougal@dougalmatthews.com
summary = Configurable elegant retrying.
description-file = README.rst
home-page = https://github.com/d0ugal/retrace
license = BSD
classifier =
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Internet
    Topic :: Utilities
keywords =
    decorator
    retry
    retrying
    exception
    exponential
    backoff

[files]
packages =
    retrace

[wheel]
universal = 1
